fixed overflow issue with app

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,5 +4,5 @@
   display: flex;
   color: white;
   width: 100vw;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
